--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>......</li>
         <li>......</li>
         </ul>
-        <img src="html5.png" alt="">
+        <img src="photo_2022-10-22_17-35-51.jpg" alt="">
         <br>
         <br>
         <input type="" name="">
